full-moon/tests/cases/fail/parser/local-function-5/source.lua
local function do()
	call()
end